# plad-rust

./: .gitignore  COPYRIGHT  CREDITS  Cargo.toml  LICENSE  NOTES  NOTES.org  README  README.md  TODO  build.rs  build.sh  gwac_data_run.sh  gwac_sim_run.sh  json_data.sh  mf_config.toml  other_data.sh  printin.py  run_config_1.sh  run_config_10.sh  run_config_11.sh  run_config_2.sh  run_config_3.sh  run_config_4.sh  run_config_6.sh  run_config_7.sh  run_config_8.sh  run_config_9.sh  rustfmt.toml  src_env.sh  tartan_run.sh  temp.pickle  temp1.pickle  validation.sh
data/: star_outNGC-6779-samples.mpk  star_outNGC-6779.toml  templates-1800.0d87616.0-0.1d50.0-25x25.toml  templates-full.toml  templates-full.toml.mpk  templates-new.toml  templates-new.toml.mpk  templates-nfd.toml  templates-nfd.toml.mpk  templates_no_ok.toml  templates_no_ok.toml.mpk
data/stars/: model_file  star_outCNST-samples.mpk  star_outCNST.toml  star_outNGC-677918.toml
data/stars/ignore/: star_outNGC-6779-samples.mpk  star_outNGC-6779111.toml
lstm/: __init__.py  __main__.py  predictor.py
protos/: predictor.capnp
python/: cpc.py  gwac_mock_server.py  test.py
python/lstm/: __init__.py  predictor.py
scripts/: determine_threshold.py  determine_threshold_nfd.sh  determine_threshold_one.sh  gwac_mock_server.py  prof.profile
src/: .#python.rs  async_utils.rs  cli.rs  cyclic_queue.rs  dat_star.rs  detector.rs  detector_utils.rs  filter.rs  filter_utils.rs  gwac_reader.rs  info_handler.rs  json_star.rs  log.rs  main.rs  mf_config.rs  nnp.c  nnp.rs  python.rs  sqlite_stars.rs  star.rs  sw_star.rs  template.rs  tester.rs  ticker.rs  toml_star.rs  utils.rs
