[package]
name = "match_filter"
version = "0.1.0"
authors = ["austin <austin.chase.m@gmail.com>"]
edition = "2018"
build = "build.rs"

[build-dependencies]
capnpc = "0.10.1"

[dependencies]
clap = "2.33.0"
npy = "0.4"
npy-derive = "0.4"
toml = "0.5"
serde = "1.0.92"
serde_derive = "1.0.92"
rmp-serde = "0.13.7"
rustfft = "3.0.0"
gnuplot = "0.0.31"
cpuprofiler = "0.0.3"
num = "0.1.0"
arrayfire = "3.6.1"
plotters = "0.2.2"
tempfile = "3.1.0"
capnp = "0.10.1"
futures = "0.1.28"
tokio = "0.2.0-alpha"
slog = "2.5.2"
slog-term = "2.4.1"
slog-async = "2.3.0"
jemallocator = "0.3.0"
lazy_static = "1.4.0"
colored = "1.8"
rayon = "1.2.0"
#arrayfire = { path="./crates/arrayfire-rust" }
