[package]
name = "match_filter"
version = "0.2.0"
authors = ["austin <austin.chase.m@gmail.com>"]
edition = "2018"
build = "build.rs"
license = "GPLv3"

[build-dependencies]
capnpc = "0.10.1"

[dependencies]
clap = "2.33.0"
toml = "0.5"
serde = "1.0.92"
serde_derive = "1.0.92"
rmp-serde = "0.13.7"
serde_json = "1.0"
cpuprofiler = "0.0.3"
num = "0.2"
arrayfire = "3.6.2"
tempfile = "3.1.0"
capnp = "0.10.1"
slog = "2.5.2"
slog-term = "2.4.1"
slog-async = "2.3.0"
jemallocator = "0.3.0"
lazy_static = "1.4.0"
colored = "1.8"
inline-python = "0.4.0"
regex = "1"
tokio = "0.2.0-alpha"
async-std = "0.99"
ctrlc = "3.0"
approx = "0.3.2"
ring_buffer = "0.1.3"
